# rstore

./: Cargo.toml
crates/storer/: Cargo.toml
crates/storer/src/: error.rs  immutable_memory.rs  immutable_sqlite.rs  lib.rs  memory.rs  sqlite.rs  storer.rs  watch.rs  watcher_manager.rs
src/: main.rs
