[package]
name = "storer"
version = "0.1.0"
edition = "2021"

[lib]
name = "storer"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
async-trait = "0.1"
tokio-stream = {version = "0.1.17", features=["full"]}
uuid = {version = "1.11.1", features=["v4"]}
futures = "0.3.31"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
rayon = "1.10.0"
sqlx = { version = "0.8.3", features = ["sqlite", "time", "runtime-tokio"] }
tracing = "0.1.41"
core_apim = { path = "/Users/henderiw/code/kform/kform-dev/choreo-rust/crates/apimachinery/core"}